# hf-finance-rag

./: .gitignore  README.md  chat_app.py  evaluate_rag.py  evaluation_report_20260205_203547.md  evaluation_report_20260205_210637.md  evaluation_results_20260205_203547.csv  evaluation_results_20260205_210637.csv  hybrid_rag_query.py  ingest_to_chroma.py  pyproject.toml
